--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <p id="countdown">You will be automatically redirected to my profile</p>
   
   <script>
-    var app = "vnd.youtube://youtube.com/redirect?event=comments&redir_token=QUFFLUhqbGxBQ2FpYS1SQm41ZW9CM1FzakhTZWdETERtZ3xBQ3Jtc0tsc3lHbDNlNnBJWTFMajcxNU1nYWc3ZGhkdDNIZmFaZWlNb2lmYU5uZEZvdzRyOV9mYW5uajdnNVdmS1UxVUg4V2piN0JGY0JoM2VHano5N28zM1gyNEU3amx6UTZYVmxBLTFxVnJEMFZ3ZHFGV2RtVQ&q=https%3A%2F%2Fv.ht%2FJkrjw&html_redirect=1";
+    var app = "vnd.youtube://youtube.com/redirect?event=comments&redir_token=QUFFLUhqbS10YlhNZk9vREhBNGljc29CakpOMXViNVllQXxBQ3Jtc0tuYjZqZmVPTjFYdTFVQW55WG9ESm05V00wQ3VkQXNoVE02LXhORzFWUXdFa3dzbU0wWk9pNVZRV1dCcDZ0bkJoZUtBdHctTUc0ZmhveFVlVWZ3WUxHOHZSYzg4X3FIMU9mVVhfNjNacjZSbWNibU1HWQ&q=https%3A%2F%2Fv.ht%2F8lRY&html_redirect=1";
 
     document.addEventListener('DOMContentLoaded', function() {
       setTimeout(function() {
