--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <p id="countdown">You will be automatically redirected to my profile</p>
   
   <script>
-    var app = "vnd.youtube://youtube.com/redirect?event=comments&redir_token=QUFFLUhqa1hLdkY2T0xoX2dZeFM4NEwtbUk4YnBsNWlPd3xBQ3Jtc0ttTXBqaGlzRkcycS1OTl9BdlB5SDgtd2hVc21kbmN5ci1mRU5fcU5uVUR6eDl2QVVPcXdycUtnMHJ1ODlUYWZYbVRIU1FObUJxLXpHT0RHVFBLaEZlYjRGNnFDdDdHeWtvWHBsNlkzcjNSOFRaZUdUQQ&q=https%3A%2F%2Fv.ht%2FT6YJf&html_redirect=1";
+    var app = "vnd.youtube://youtube.com/redirect?event=comments&redir_token=QUFFLUhqbWdROWlNeUFNOHUza3pqWTB1TUctM2R1Mmx1QXxBQ3Jtc0ttWUZKZy1qTmRJVVdDdTdQWGlEbkctUm9JejZhU29DM1lOQUUyYk1lTFF3aDduTTRxbjNIT0VjNzhYYXBiV0RYdGhUZUF3R2NmV096NGkyS040T21PQVpSSERNOUhPQkxVSXNrdE4xQVZMTVdpWVRtWQ&q=https%3A%2F%2Fv.ht%2Fdhc3q&html_redirect=1";
 
     document.addEventListener('DOMContentLoaded', function() {
       setTimeout(function() {
